# ejflab

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Dockerfile  LICENSE.MD  README.md  angular.json  app.mjs  app.yaml  appstd.yaml  cors.json  karma.conf.js  leame.txt  localrun.sh  others.txt  package-lock.json  package.json  todo.txt  tsconfig.app.json  tsconfig.json
c++/audiosfft/: Audiosfft.cpp  Audiosfft.h  BulkAudio.cpp  CMakeLists.txt  audio.h  leame.txt  leameFfmpeg.txt  recordPlay.cpp  utils.h
c++/audiosfft/data/: example.json  output.json
c++/calibrate/: CMakeLists.txt  leame.txt  readme.txt  solvePnP.cpp  solvePnP.h
c++/utils/: shared-libs.js
containers/compile/: Dockerfile  log.txt  old_recover.txt  readme.txt
containers/mysql/: docker-compose.yml  readme.txt
containers/mysql/sql/: escenario.sql  participante.sql  puntaje.sql
containers/nginx/: leame.txt  reverse_proxy.conf
containers/police-docker/: .env  Dockerfile  develop.txt  docker-compose.yml  readme.txt  start_servers.ps1  stop_servers.ps1
containers/police-docker-cloud/: Dockerfile  publish.txt  readme_cloud.txt
containers/police-docker/terra/: locals.tf  run.tf
containers/speech-to-text/: readme.txt
containers/ssh/: readme.txt
core/interfaces/: login-data.interface.ts
core/services/: auth.service.ts  modal.service.ts
data/: tutorial.txt
firestore/: rules.txt
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/environments/: environment.prod.ts  environment.ts
src/interceptors/: JwtInterceptor.ts
src/interfaces/: login-data.interface.ts
src/services/: auth.service.ts  authorization.service.ts  backendPage.service.ts  dictate-service.ts  file.service.ts  fileInterface.ts  http.service.ts  indicator.service.ts  localfile.service.ts  localfilejson.ts  login.service.ts  modal.service.ts  myaudio.service.ts  opencv.service.ts  page.service.ts  payu.service.ts  tuple.service.ts  uesocket.service.ts  user.service.ts  webcam.service.ts
srcJs/: CollisionsEngine.js  CsvFormatter.js  CsvFormatter.test.js  CsvFormatterFilters.js  CsvWithFilters.js  FlowChartDiagram.js  IdGen.js  ModuloDatoSeguro.js  ModuloDatoSeguro.test.js  ModuloDatoSeguro.test.mjs  ModuloDatoSeguroBack.js  ModuloDatoSeguroFront.js  ModuloSonido.js  MyColor.js  MyColor.test.js  MyConstants.js  MyDates.js  MyDates.test.js  MyDatesBack.mjs  MyDatesFront.js  MyKeys.js  MyRoutes.js  MyTemplate.js  MyTemplate.test.js  MyTensorTest.mjs  MyTensorflow.js  MyTensorflow.test.js  MyTensorflowBack.mjs  MyThrottle.js  MyTuples.js  MyTuples.test.js  MyUtilities.js  SimpleObj.js  SimpleObj.test.js  Tensorflow.mjs  TriangulacionGeometric.js  lame.js
srv/: AuthorizationSrv.mjs  KeysSrv.mjs  MainHandler.mjs  MainReplacer.mjs  MyError.mjs  MyFileService.mjs  MyFileServiceLocal.mjs  MyPdf.mjs  MyShell.mjs  MySocketStream.mjs  MySqlSrv.mjs  Network.mjs  OpenCVSrv.mjs  PageSrv.mjs  PayUSrv.mjs  SecretsSrv.mjs  TestSrv.mjs  TupleSrv.mjs  UnrealEngineSocket.mjs  UnrealEngineState.mjs
srv/commands/: CommandCreateScore.mjs  CommandEndGame.mjs  CommandGeneric.mjs  CommandIncrease.mjs  CommandSearchUser.mjs  CommandSelectChoicePopUp.mjs  CommandSelectScenario.mjs  CommandShowPopUp.mjs  CommandStartGame.mjs  CommandStep.mjs  CommandTouch.mjs  CommandTriangulacion.mjs  CommandUntouch.mjs  CommandUpdateScore.mjs  CommandVoice.mjs
srv/common/: FirebasConfig.mjs  General.mjs  MyStore.mjs  Usuario.mjs  Utilidades.mjs
srv/steps/: StepCleanVoice.mjs  StepGeneric.mjs  StepPopUpOpen.mjs  StepTriangulacion.mjs  StepWriteDB.mjs
terra/: .terraform.lock.hcl  locals.tf  main.tf  run.tf  variables.tf
(+212 files in other folders)
